--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -19,6 +19,14 @@ on:
     - cron: "0 0 * * *"
 
 jobs:
+  welcome:
+    name: ASCII Art Action
+    run-on: ubuntu-latest
+    steps:
+    - uses: mscoutermarsh/ascii-art-action@1.0.1
+      with:
+        text: 'Welcome to Molecool'
+
   test:
     name: Test on ${{ matrix.os }}, Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
