--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -21,7 +21,7 @@ on:
 jobs:
   welcome:
     name: ASCII Art Action
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: mscoutermarsh/ascii-art-action@1.0.1
       with:
